07_llmd/inference-gateway.yaml
# 8.2-2: 推論 Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress
  labels:
    istio.io/rev: openshift-gateway
spec:
  gatewayClassName: data-science-gateway-class
  infrastructure:
    parametersRef:
      group: ''
      kind: ConfigMap
      name: openshift-ai-inference-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: openshift-ai-inference-service-tls
        mode: Terminate
